--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,10 +1,10 @@
 @use 'reset';
 @use 'variables/global';
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .app {
+    font-family: var(--font-famaly-main);
     font: var(--font-m);
-    background: var(--bg-color);
-    color: var(--primary-color);
     min-height: 100vh;
 }
 
