create circular pagination

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -6,6 +6,7 @@
     font-family: var(--font-famaly-main);
     font: var(--font-m);
     min-height: 100vh;
+    background: var(--bg-body);
 }
 
 .content-page {
