--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,4 +1,5 @@
 :root {
+    --bg-body: rgb(229, 229, 229);
     --primary-blue: #3877EE;
     --primary-red: #EF5DA8;
     --color-gray:  rgba(66, 86, 122, 1);
