styled circular pagination

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .app {
-    font-family: var(--font-famaly-main);
+    font-family: var(--font-famaly-main), sans-serif;
     font: var(--font-m);
     min-height: 100vh;
     background: var(--bg-body);
