--- a/src/shared/ui/Title/Title.module.scss
+++ b/src/shared/ui/Title/Title.module.scss
@@ -17,3 +17,23 @@
         background: linear-gradient(to bottom, var(--primary-blue), var(--primary-red));
     }
 }
+
+@media (max-width: 1200px) {
+    .h1 {
+        position: relative;
+        padding-left: 50px;
+        font-size: 42px;
+    }
+}
+
+@media (max-width: 520px) {
+    .h1  {
+        padding: 0;
+        text-wrap: wrap;
+        font-size: var(--font-size-m);
+        line-height: var(--font-line-m);
+        &:before {
+            display: none;
+        }
+    }
+}
