--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,18 +2,9 @@
 @use 'variables/global';
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-.app {
+#root {
     font-family: var(--font-famaly-main), sans-serif;
     font: var(--font-m);
     min-height: 100vh;
     background: var(--bg-body);
-}
-
-.content-page {
-    display: flex;
-}
-
-.page-wrapper {
-    flex: 1;
-    padding: 20px;
 }
