--- a/src/features/MainSlider/ui/CircularPagination/CircularPagination.module.scss
+++ b/src/features/MainSlider/ui/CircularPagination/CircularPagination.module.scss
@@ -5,7 +5,7 @@
     width: 530px;
     height: 530px;
     border-radius: 50%;
-    border: 1px solid var(--color-gray-opacity);
+    border: 1px solid var(--color-gray-100);
     transform: translate(-50%, -50%);
     display: flex;
     justify-content: center;
@@ -21,7 +21,6 @@
     width: 56px;
     height: 56px;
     border-radius: 50%;
-    //border: 1px solid var(--color-gray);
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -34,8 +33,12 @@
             width: 56px;
             height: 56px;
             border-radius: 50%;
-            border: 1px solid var(--color-gray);
             background-color: var(--bg-body);
+            font-family: var(--font-famaly-main), sans-serif;
+            font-size: var(--font-size-m);
+            line-height: var(--font-line-m);
+            border: 1px solid var(--color-gray-500);
+            color: var(--color-gray);
             & > .countWrapp {
                 position: absolute;
                 top: 50%;
@@ -65,8 +68,12 @@
         width: 56px;
         height: 56px;
         border-radius: 50%;
-        border: 1px solid var(--color-gray);
         background-color: var(--bg-body);
+        font-family: var(--font-famaly-main), sans-serif;
+        font-size: var(--font-size-m);
+        line-height: var(--font-line-m);
+        border: 1px solid var(--color-gray-500);
+        color: var(--color-gray);
         & > .countWrapp {
             position: absolute;
             top: 50%;
@@ -97,5 +104,11 @@
     left: calc(50% + 40px);
     transform: translate(0, -50%);
     font-family: var(--font-famaly-main), sans-serif;
+}
+
+@media (max-width: 1200px) {
+    .wrapper {
+        transform: translate(-50%, -50%) scale(.7);
+    }
 }
 
