--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     padding-top: 12vh;
-    border: 1px solid var(--color-gray-opacity);
+    border: 1px solid var(--color-gray-100);
     height: 100vh;
     position: relative;
     display: flex;
@@ -17,16 +17,35 @@
         top: 50%;
         width: 100%;
         height: 0;
-        border-bottom: 1px solid var(--color-gray-opacity);
+        border-bottom: 1px solid var(--color-gray-100);
     }
     &:after {
         top: 0;
         right: 50%;
         height: 100%;
-        border-right: 1px solid var(--color-gray-opacity);
+        border-right: 1px solid var(--color-gray-100);
     }
 }
 
 .title {
     max-width: 300px;
+}
+
+@media (max-width: 520px) {
+    .wrapper {
+        padding: 8vh 0 4vh;
+        display: block;
+        border: none;
+        &:before,
+        &:after {
+            display: none;
+        }
+    }
+    .title {
+        max-width: 123px;
+    }
+    .countersWrapp {
+        display: flex;
+        flex-direction: column;
+    }
 }
