--- a/src/shared/ui/Container/Container.module.scss
+++ b/src/shared/ui/Container/Container.module.scss
@@ -1,6 +1,6 @@
 .container {
-    max-width: 1440px;
+    max-width: 1480px;
     height: 100%;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 20px;
 }
