--- a/src/features/MainSlider/ui/MainSliderBtns/MainSliderBtns.module.scss
+++ b/src/features/MainSlider/ui/MainSliderBtns/MainSliderBtns.module.scss
@@ -10,33 +10,38 @@
     height: 50px !important;
     background-color: transparent;
     border-radius: 50%;
-    border: 1px solid rgba(66, 86, 122, 0.5);
+    border: 1px solid rgb(66 86 122 / 50%);
     position: static !important;
-    transition: background-color .3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: center;
-    &:before,
-    &:after {
+
+    &::before,
+    &::after {
         display: none;
     }
+
     &:hover {
         background-color: #fff;
     }
+
     & > svg {
         width: auto !important;
         height: auto !important;
     }
 }
 
-@media (max-width: 520px) {
+@media (width <= 520px) {
     .mainSliderBtns {
         margin-top: 10px;
         gap: 10px;
     }
+
     .swiperBtn {
         width: 25px !important;
         height: 25px !important;
+
         //pointer-events: none;
     }
 }
