--- a/src/entities/EventSliderItem/ui/EventSliderItem.module.scss
+++ b/src/entities/EventSliderItem/ui/EventSliderItem.module.scss
@@ -1,5 +1,5 @@
 .year {
-    color: rgb(56, 119, 238);
+    color: rgb(56 119 238);
     font-family: 'Bebas Neue', serif;
     font-size: var(--font-size-l);
     line-height: var(--font-line-l);
