--- a/src/features/MainSlider/ui/BigYears/BigYears.module.scss
+++ b/src/features/MainSlider/ui/BigYears/BigYears.module.scss
@@ -11,6 +11,7 @@
 
 .year {
     font-family: var(--font-famaly-main), sans-serif;
+
     //font-size: 200px;
     font-size: clamp(146px, 13.7vw, 200px);
     font-weight: 700;
@@ -27,18 +28,18 @@
     color: var(--primary-red);
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
     .bigYears {
         gap: 50px;
     }
+
     .year {
         font-size: clamp(90px, 10vw, 110px);
         line-height: 72px;
     }
 }
 
-
-@media (max-width: 520px) {
+@media (width <= 520px) {
     .bigYears {
         margin-top: 56px;
         position: static;
@@ -46,6 +47,7 @@
         gap: 30px;
         transform: unset;
     }
+
     .year {
         font-size: clamp(56px, 17vw, 65px);
         line-height: 72px;
