--- a/src/features/MainSlider/ui/MainSlider/MainSlider.module.scss
+++ b/src/features/MainSlider/ui/MainSlider/MainSlider.module.scss
@@ -2,13 +2,13 @@
     padding: 0 80px 5vh;
 }
 
-@media (max-width: 1200px) {
+@media (width <= 1200px) {
     .mainSlider {
         padding: 0 50px 2vh;
     }
 }
 
-@media (max-width: 520px) {
+@media (width <= 520px) {
     .mainSlider {
         padding: 0;
     }
