--- a/src/pages/MainPage/ui/MainPage.module.scss
+++ b/src/pages/MainPage/ui/MainPage.module.scss
@@ -6,20 +6,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    &:before,
-    &:after {
-        content: "";
+
+    &::before,
+    &::after {
+        content: '';
         display: block;
         position: absolute;
     }
-    &:before{
+
+    &::before {
         right: 0;
         top: 50%;
         width: 100%;
         height: 0;
         border-bottom: 1px solid var(--color-gray-100);
     }
-    &:after {
+
+    &::after {
         top: 0;
         right: 50%;
         height: 100%;
@@ -31,19 +34,22 @@
     max-width: 300px;
 }
 
-@media (max-width: 520px) {
+@media (width <= 520px) {
     .wrapper {
         padding: 8vh 0 4vh;
         display: block;
         border: none;
-        &:before,
-        &:after {
+
+        &::before,
+        &::after {
             display: none;
         }
     }
+
     .title {
         max-width: 123px;
     }
+
     .countersWrapp {
         display: flex;
         flex-direction: column;
